firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__slash_rename_prefilled_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
▌ Rename thread
▌
▌ Current project title

↑/↓ Navigate · enter Select · tab Complete · esc to cancel
