firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Firefam to do anything                                                    "
"                                                                                "
"  Fast on                                                                       "
