firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__status_line_goal_active_token_budget_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"────────────────────────────────────────────────────────────────────────────────"
"  /tmp/project                                                                  "
"› Ask Firefam to do anything                                                    "
"────────────────────────────────────────────────────────────────────────────────"
"  ? help · / commands and skills                   Read Only · gpt-5.4 default  "
