firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__status_line_model_with_reasoning_fast_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"────────────────────────────────────────────────────────────────────────────────"
"  /tmp/project                                                                  "
"› Ask Firefam to do anything                                                    "
"────────────────────────────────────────────────────────────────────────────────"
"  ? help · / commands and skills                Read Only · gpt-5.4 xhigh fast  "
