firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"● Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"  /tmp/project                                                                  "
"› Ask Firefam to do anything                                                    "
"────────────────────────────────────────────────────────────────────────────────"
"  ? help · / commands and skills                   Read Only · gpt-5.5 default  "
