firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"● Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"  /tmp/project                                                                  "
"› Ask Firefam to do anything                                                    "
"────────────────────────────────────────────────────────────────────────────────"
"  ? help · / commands and skills                   Read Only · gpt-5.5 default  "
